<resources>
    <string name="app_name">Multi Language App</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Dont have an account? Sign Up</string>
    <string name="choose_language">Choose Language:</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">English</string>
    <string name="french">Français</string>
</resources>
